--- a/Cyborg/Seminars/Human-machine Interaction.html
+++ b/Cyborg/Seminars/Human-machine Interaction.html
@@ -48,10 +48,10 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.007.png'/><br><b>Raymond Scott’s Electronium - preservationsound.com</b></div>
 
 <p><a href="https://youtu.be/1SHJ6CcML80">Cindy Electronium</a>
-<p><a href="http://youtu.be/MDIIfAMGLhM">Twilight in Turkey</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.010.png'/><br><b>RCA Mark II Synthesiser, Milton Babbitt, Peter Mauzey, Vladimir Ussachevsky - gearogs.com</b></div>
+<p><a href="http://youtu.be/MDIIfAMGLhM">Twilight in Turkey</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.008.png'/><br><b>Gordon Mumma at studio & schematics for MESA - brainwashed.com</b></div>
 
-<p><a href="https://youtu.be/RmQogNq0st4">RCA Mark II Synthesiser</a>
-<p><a href="https://youtu.be/rgN_VzEIZ1I">The Story of the RCA Synthesizer</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.011.png '/><br><b>Max Mathews, GROOVE system (1969) - wikipedia.org</b></div>
+<p><a href="https://youtu.be/4e-OzKSmZX0">Cybersonic Cantilevers (1973)</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.009.png'/><br><b>Gordon Mumma (1972) Performing AMBIVEX.</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.011.png '/><br><b>Max Mathews, GROOVE system (1969) - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.017.png'/><br><b>The Nervous System, including the Central Nervous System (CNS) and the Peripheral Nervous System (PNS)</b></div>
 
@@ -93,11 +93,8 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.034.png'/></div>
 
 <p><a href="https://www.mstrcyork.org/">mstrc</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.035.png'/><br><b>mstrc Audience Response System</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.008.png'/><br><b>Gordon Mumma at studio & schematics for MESA - brainwashed.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.009.png'/><br><b>Gordon Mumma (1972) Performing AMBIVEX.</b></div>
-
-<p><a href="https://youtu.be/4e-OzKSmZX0">Cybersonic Cantilevers (1973)</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.037.png'/><br><b>Nicolas Collins: Trombone-Propelled Electronics - artschoolshithead.files.wordpress.com</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.036.png'/><br><b>Max Mathews with Radio Baton</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.037.png'/><br><b>Nicolas Collins: Trombone-Propelled Electronics - artschoolshithead.files.wordpress.com</b></div>
 
 <p><a href="http://youtu.be/89jbl0ZuaH4?t=4m55s">Nicolas Collins (1986)</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.041.png'/><br><b>Atau Tanaka - bbc.co.uk</b></div>
 
