--- a/Cyborg/Seminars/Creativity and Music.html
+++ b/Cyborg/Seminars/Creativity and Music.html
@@ -52,11 +52,10 @@
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar6/seminar6.013.png'/></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar6/seminar6.014.png'/></div>
-
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar6/seminar6.015.png'/></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar6/seminar6.016.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar6/seminar6.014.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar6/seminar6.016.png'/></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar6/seminar6.017.png'/></div>
 
