--- a/Cyborg/Seminars/Machine Listening.html
+++ b/Cyborg/Seminars/Machine Listening.html
@@ -86,13 +86,9 @@
 
 <p>A <strong>spectrogram</strong> is a plot over time indicating energy in a sound at different frequency components. Typical figures might be: fundamental frequency 43 Hz, 86 frames per second (analysis regions overlap by one half)
 <p><strong>Free Software</strong>:
-<p><em>Sonic Visualiser</em>, Queen’s Mary, University of London<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide3/Sonic Visualiser.png'/><br><b>Sonic Visualiser</b></div>
+<p><a href="http://sonicvisualiser.org/">Sonic Visualiser</a>, Queen’s Mary, University of London<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide3/Sonic Visualiser.png'/><br><b>Sonic Visualiser</b></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://sonicvisualiser.org/");</pre>
-
-<p><em>SPEAR</em>, Michael Kingbeil (McAulay and Quatieri - peak matching algorithm)<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide3/SPEAR.png'/><br><b>SPEAR</b></div>
-
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://www.klingbeil.com/spear/");</pre>
+<p><a href="http://www.klingbeil.com/spear/">SPEAR</a>, Michael Kingbeil (McAulay and Quatieri - peak matching algorithm)<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide3/SPEAR.png'/><br><b>SPEAR</b></div>
 
 <p><strong>FreqScope in SC</strong>
 <p>There is a GUI implementation of a Frequency Spectrum Visualiser:<pre class='code prettyprint lang-sc'>{LPF.ar(WhiteNoise.ar(1), LFNoise1.kr(1).range(20,12250))}.play;
