--- a/Cyborg/Seminars/Computational Creativity and Music 1.html
+++ b/Cyborg/Seminars/Computational Creativity and Music 1.html
@@ -93,7 +93,7 @@ a = 4;
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.018.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
 
-<p><pre class='code prettyprint lang-sc'>//Generative remix by Nick Collins (evaluate each section of code):
+<p><pre class='code prettyprint lang-sc'>//Generative remix by Nick Collins (2007) - evaluate each section of code:
 b = Buffer.loadDialog(s); //you need to change the path to a soundfile in your computer
 
 (
