--- a/Cyborg/Seminars/Generative Music.html
+++ b/Cyborg/Seminars/Generative Music.html
@@ -22,10 +22,7 @@
 <div id='related'>See also: <a href="./../../Cyborg.html">Cyborg Music</a>, <a href="./../../Cyborg/Seminars/Computation and Music.html">Computation and Music</a>, <a href="./../../Cyborg/Seminars/Creativity and Music.html">Creativity and Music</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar3/seminar3.001.png'/><br><b>AI-Da</b></div>
-
-<p><a href="https://time.com/5607191/robot-artist-ai-da-artificial-intelligence-creativity/">Time article about AI-Da - time.com</a>
-<p><a href="https://youtu.be/VCVgNDdlH4A">The Artist in the Machine?</a><a href="https://youtu.be/XaZJG7jiRak">TED talk by AI-Da</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.001.png'/><br><b>Johann Wolfgang von Goethe - wikipedia.org</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.001.png'/><br><b>Johann Wolfgang von Goethe - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.002.png'/><br><b>In Handbook of Research on Creativity, 2013</b></div>
 
@@ -89,7 +86,7 @@ a = 4;
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.018.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
 
-<p><pre class='code prettyprint lang-sc'>//Generative remix by Nick Collins (evaluate each section of code):
+<p><pre class='code prettyprint lang-sc'>//Generative remix by Nick Collins (2007) - evaluate each section of code:
 b = Buffer.loadDialog(s); //you need to change the path to a soundfile in your computer
 
 (
@@ -222,6 +219,141 @@ barsdone= barsdone+1;
 
 t.stop;
 b.free;</pre>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.016.png'/><br><b>Andrey Markov - wikipedia.org</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.017.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.018.png'/><br><b>2-state Markov process</b></div>
+
+<p><pre class='code prettyprint lang-sc'>(
+SynthDef(\sinePerc, {arg freq=400, out=0, amp=0.5;
+    var sig;
+    sig = SinOsc.ar(freq,0,amp)*EnvGen.kr(Env.perc(0.01,0.1), doneAction: 2);
+    Out.ar(out, sig!2);
+}
+).add;
+)
+
+//Simple 2-state Markov Chain
+(
+~mChain = [
+[4, [4, 9], [0.3,0.7]], //element, nextElement, weights
+[9, [4, 9], [0.4,0.6]]
+]
+)
+
+(
+~index = ~mChain.flop[0].indexOf(4);
+{ inf.do{
+~note = ~mChain[~index][1].choose(~mChain[~index][2]);
+    Synth(\sinePerc, [\freq, (72+~note).midicps]);
+~index = ~mChain.flop[0].indexOf(~note);
+0.2.yield;
+}
+}.fork
+)</pre>
+<pre class='code prettyprint lang-sc'>//Zero order transition table (weighted random)
+(
+{ inf.do{
+Synth(\sinePerc, [\freq, [72, 71, 69].wchoose([0.25, 0.5, 0.25]).midicps]);
+    0.2.yield;
+};
+}.fork;
+)
+
+//another example using text as data
+//the ascii of each character of the text is used for statistical analysis
+//derived probabilities from text and converted into midi note values
+
+(
+SynthDef(\my_synth, {|dur = 1.0, amp = 1.0, freq = 440|
+    var env = EnvGen.ar(Env.new([1, 0.1, 0], [0.06, dur - 0.06]), doneAction: 2);
+    Out.ar([0, 1], SinOsc.ar([freq * 0.995, freq * 1.005], 0, env * amp))
+}).add;
+~text = "Serialism, along with John Cage's indeterminate music (music composed with the use of chance operations), and Werner Meyer-Eppler's aleatoricism, was enormously influential in post-war music. Theorists such as George Perle codified serial systems, and his 1962 text Serial Composition and Atonality became a standard work on the origins of serial composition in the work of Schoenberg, Berg and Webern.
+Several of the composers associated with Darmstadt, notably Karlheinz Stockhausen, Karel Goeyvaerts, and Henri Pousseur developed a form of serialism that initially rejected the recurring rows characteristic of twelve-tone technique, in order to eradicate any lingering traces of thematicism (Felder 1977, 92). Instead of a recurring, referential row, each musical component is subjected to control by a series of numerical proportions (Morgan 1975, 3). In Europe, the style of some serial as well as non-serial music of the early 1950s emphasized the determination of all parameters for each note independently, often resulting in widely spaced, isolated points of sound, an effect called first in German punktuelle Musik (pointist or punctual music), then in French musique ponctuelle, but quickly confused with pointillistic (German pointillistische, French pointilliste) the familiar term associated with the densely packed dots in paintings of Seurat, despite the fact that the conception was at the opposite extreme (Stockhausen and Frisius 1998, 451).
+Pieces were structured by closed sets of proportions, a method closely related to certain works from the de Stijl and Bauhaus movements in design and architecture called serial art by some writers (Bochner 1967, Gerstner 1964, Guderian 1985, Sykora 1983), specifically the paintings of Piet Mondrian, Theo van Doesburg, Bart van Leck, Georg van Tongerloo, Richard Paul Lohse, and Burgoyne Diller, who had been seeking to “avoid repetition and symmetry on all structural levels and working with a limited number of elements” (Bandur 2001, 54).
+Stockhausen described the final synthesis in this manner:
+So serial thinking is something that's come into our consciousness and will be there forever: it's relativity and nothing else. It just says: Use all the components of any given number of elements, don't leave out individual elements, use them all with equal importance and try to find an equidistant scale so that certain steps are no larger than others. It's a spiritual and democratic attitude toward the world. The stars are organized in a serial way. Whenever you look at a certain star sign you find a limited number of elements with different intervals. If we more thoroughly studied the distances and proportions of the stars we'd probably find certain relationships of multiples based on some logarithmic scale or whatever the scale may be. (Cott 1973, 101)
+Igor Stravinsky's adoption of twelve-tone serial techniques offers an example of the level of influence that serialism had after the Second World War. Previously Stravinsky had used series of notes without rhythmic or harmonic implications (Shatzkin 1977). Because many of the basic techniques of serial composition have analogs in traditional counterpoint, uses of inversion, retrograde and retrograde inversion from before the war are not necessarily indicative of Stravinsky adopting Schoenbergian techniques. However with his meeting Robert Craft and acquaintance with younger composers, Stravinsky began to consciously study Schoenberg's music, as well as the music of Webern and later composers, and began to use the techniques in his own work, using, for example, serial techniques applied to fewer than 12 notes. Over the course of the 1950s he used procedures related to Messiaen, Webern and Berg. While it is difficult to label each and every work as serial in the strict definition, every major work of the period has clear uses and references to its ideas.
+During this period, the concept of serialism influenced not only new compositions but also the scholarly analysis of the classical masters. Adding to their professional tools of sonata form and tonality, scholars began to analyze previous works in the light of serial techniques; for example they found the use of row technique in previous composers going back to Mozart and Beethoven (Jalowetz 1944, 387; Keller 1955, passim). In particular, the orchestral outburst that introduces the development section half-way through the last movement of Mozart's next-to-last symphony is a tone row that Mozart punctuates in a very modern and violent episode that Michael Steinberg called rude octaves and frozen silences (Steinberg 1998, 400).
+Furthermore, the organizing principles of serialism inspired mathematical analogues, such as uses of set theory, group theory, operators, and parametrization, for example in the post-war works of Elliott Carter, Iannis Xenakis, and Witold Lutosławski.[citation needed] Likewise, the mathematical analogues in integral serialism were influential in the development of electronic music and synthesized music. Ruth Crawford Seeger is credited with extending serial controls to parameters other than pitch and to formal planning as early as 1930–33 (Tick 2001)";
+~update = {//have to evaluate this to run new text
+~smallLetters = (97..122).asAscii;
+~capitalLetters = (65..90).asAscii;
+~probabilities = [];
+~smallLetters.do{|item, index|
+        ~probabilities = ~probabilities.add(
+            ~text.findAll(item.asString).size +
+                ~text.findAll(~capitalLetters[index]).size / ~text.size;
+    )
+    };
+~probabilities = ~probabilities++[1-~probabilities.sum];
+};
+)
+//routine to play notes
+(
+~update.value;
+{
+var note;
+inf.do{
+note = (48..(48+~probabilities.size)).wchoose((~probabilities));
+if(note == 74, {"silence".postln}, {
+Synth(\my_synth, [\freq, note.postln.midicps, \dur, 0.2])
+});
+0.2.yield;
+~update.value;
+}
+}.fork
+)
+//change text input
+~text = "Hello";
+
+~text = "Hi there";
+
+~text = "a   abc zy";
+
+~text = "aaa a aaz";
+
+~text = "a";</pre>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.021.png'/></div>
+
+<p><pre class='code prettyprint lang-sc'>(
+~mChain = [
+    [0, [7, 5, 4], [0.5,0.3, 0.2]], //element, nextElement, weights
+    [7, [0], [1]],
+    [5, [7, 4], [0.5,0.5]],
+    [4, [0,5, 7], [0.2,0.4,0.4]]
+    ];
+)
+
+(
+~index = ~mChain.flop[0].indexOf(4);
+{ inf.do{
+~note = ~mChain[~index][1].choose(~mChain[~index][2]);
+    Synth(\sinePerc, [\freq, (72+~note).midicps]);
+~index = ~mChain.flop[0].indexOf(~note);
+0.2.yield;
+}
+}.fork
+)</pre>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar8/seminar8.008.png'/><br><b>Robot reading - royalsociety.org</b></div>
+<pre class='code prettyprint lang-sc'>//now a musical example:
+//this is our melody which we will train the markov with
+~notes = [ 0, 0, 7, 7, 9, 9, 7, 7, 5, 5, 4, 4, 2, 2, 0, 0 ] + 60;
+
+Pbind(\midinote, Pseq(~notes, 1), \dur, 0.3).play
+
+~pairs = ~notes.slide(2).slice;
+
+~num = (~pairs.size/2);
+~secondPair = Array.iota(~num.asInteger,2);
+~trainMe = ~pairs.reshapeLike(~secondPair);
+
+m = MarkovSet.new;
+
+~trainMe.do{|item| m.read(item[0], item[1]) };
+
+Pbind(\midinote, Pfsm2(m), \dur, 0.5).play;</pre>
 <div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.038.png'/><br><b>Generative Music 1 at the Science Museum - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.039.png'/></div>
