--- a/OnViolence.html
+++ b/OnViolence.html
@@ -7,6 +7,7 @@
 <script src='./docmap.js' type='text/javascript'></script>
 <script src='./prettify.js' type='text/javascript'></script>
 <script src='./lang-sc.js' type='text/javascript'></script>
+<script src='./MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='.';</script>
 </head>
 <ul id='menubar'></ul>
@@ -712,4 +713,4 @@ ampIn: 1.0, volMetal: 1.0, volScream1: 1.5, volScream2: 0.5, volScream3: 0.9, vo
 
 ~violence.buxtasynths.objects[8].set(\vol, 0.5);</pre>
 
-<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/OnViolence/HelpSource/OnViolence.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/OnViolence/HelpSource/OnViolence.schelp</a><br>link::OnViolence::<br>sc version: 3.8.0</div></div></body></html>
+<p><div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/OnViolence/HelpSource/OnViolence.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/OnViolence/HelpSource/OnViolence.schelp</a><br>link::OnViolence::<br>sc version: 3.6.5</div></div></body></html>
