--- a/ComputerDotPlay/Code Examples/Mixing Things.html
+++ b/ComputerDotPlay/Code Examples/Mixing Things.html
@@ -19,7 +19,7 @@
 <div id='summary'>ComputerDotPlay</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Lectures/Digital Effects">Digital Effects</a>, <a href="./../../ComputerDotPlay/Practicals/Buses and Ndefs.html">Buses and Ndefs</a></div>
+<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Resources/Digital Effects.html">Digital Effects</a>, <a href="./../../ComputerDotPlay/Practicals/Buses and Ndefs.html">Buses and Ndefs</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Mix%20things%20up'>Mix things up</a></li>
