--- a/ComputerDotPlay/Practicals/Digital Synthesis.html
+++ b/ComputerDotPlay/Practicals/Digital Synthesis.html
@@ -19,7 +19,7 @@
 <div id='summary'>ComputerDotPlay</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Practicals/UGens 1">UGens 1</a>, <a href="./../../ComputerDotPlay/Practicals/UGens 2">UGens 2</a></div>
+<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Practicals/Playing with UGens 1.html">Playing with UGens 1</a>, <a href="./../../ComputerDotPlay/Practicals/Playing with UGens 2.html">Playing with UGens 2</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Digital%20Synthesis'>Digital Synthesis</a></li>
