--- a/ComputerDotPlay/Code Examples/MIDI File Fun.html
+++ b/ComputerDotPlay/Code Examples/MIDI File Fun.html
@@ -19,7 +19,7 @@
 <div id='summary'>ComputerDotPlay</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Lectures/Programming Concepts 2">Programming Concepts 2</a>, <a href="./../../ComputerDotPlay/Code Examples/MIDI Fun">MIDI Fun</a></div>
+<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Practicals/Programming Concepts 2.html">Programming Concepts 2</a>, <a href="./../../ComputerDotPlay/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#SimpleMIDIFile'>SimpleMIDIFile</a></li>
