--- a/ComputerDotPlay/Code Examples/MIDI Synthesiser.html
+++ b/ComputerDotPlay/Code Examples/MIDI Synthesiser.html
@@ -19,7 +19,7 @@
 <div id='summary'>ComputerDotPlay</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Code Examples/Synth Fun.html">Synth Fun</a>, <a href="./../../ComputerDotPlay/Code Examples/MIDI Fun">MIDI Fun</a>, <a href="./../../ComputerDotPlay/Code Examples/FX Fun.html">FX Fun</a></div>
+<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Code Examples/Synth Fun.html">Synth Fun</a>, <a href="./../../ComputerDotPlay/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a>, <a href="./../../ComputerDotPlay/Code Examples/FX Fun.html">FX Fun</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#A%20synthesiser%20that%20takes%20a%20MIDI%20input'>A synthesiser that takes a MIDI input</a></li>
