--- a/ComputerDotPlay/Practicals/Buses and Ndefs.html
+++ b/ComputerDotPlay/Practicals/Buses and Ndefs.html
@@ -19,7 +19,7 @@
 <div id='summary'>ComputerDotPlay</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Lectures/Digital Synthesis">Digital Synthesis</a>, <a href="./../../ComputerDotPlay/Practicals/Playing with UGens 2.html">Playing with UGens 2</a></div>
+<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Practicals/Digital Synthesis.html">Digital Synthesis</a>, <a href="./../../ComputerDotPlay/Practicals/Playing with UGens 2.html">Playing with UGens 2</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Ndefs'>Ndefs</a></li>
