--- a/ComputerDotPlay/Practicals/Playing with UGens 2.html
+++ b/ComputerDotPlay/Practicals/Playing with UGens 2.html
@@ -19,7 +19,7 @@
 <div id='summary'>ComputerDotPlay</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Handbook#Course%20Materials">Course Materials</a>, <a href="./../../ComputerDotPlay/Practicals/Playing with UGens 1.html">Playing with UGens 1</a></div>
+<div id='related'>See also: <a href="./../../ComputerDotPlay.html">ComputerDotPlay</a>, <a href="./../../ComputerDotPlay/Practicals/Playing with UGens 1.html">Playing with UGens 1</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#More%20UGens'>More UGens</a></li>
